--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -60,10 +60,10 @@
 	<footer class="footer">
 		<div class="container">
 			<div class="input-group" ng-show="connected">
-				<span class="input-group-addon" id="basic-addon1">Message</span> <input
-					ng-model="message" type="text" class="form-control"
-					placeholder="Message" aria-describedby="basic-addon1"> <span
-					class="input-group-btn">
+				<span class="input-group-addon" id="basic-addon1">Message</span>
+				<input ng-model="message" type="text" class="form-control"
+					placeholder="Message" aria-describedby="basic-addon1" ng-keyup="$event.keyCode == 13 && send()">
+				<span class="input-group-btn">
 					<button class="btn btn-primary" type="submit" ng-click="send()">Send</button>
 				</span>
 			</div>
